--- a/readme
+++ b/readme
@@ -1,8 +1,8 @@
-Yugioh Chaos Draft Saver!
+# Yugioh Chaos Draft Saver!
 
 This small bit of code was created to help me save my drafted cards(on ygoprodeck pack simulator) in case the website happens to get stuck loading the next pack indefinitely.
 
-How to use:
+## How to use:
 
 - Use "Inspect element" on the draft page
 - Write down: "chaosdraftarray" in the console
